apps/linkwarden/manifests/meilisearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: linkwarden
  labels:
    app: meilisearch
spec:
  type: ClusterIP
  selector:
    app: meilisearch
  ports:
    - name: http
      port: 7700
      targetPort: http
      protocol: TCP
