apps/linkwarden/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  namespace: linkwarden
  labels:
    app: linkwarden
spec:
  type: ClusterIP
  selector:
    app: linkwarden
    app.kubernetes.io/name: linkwarden
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
